# chess_game

./: .gitignore  CMakeLists.txt  Makefile  chess_game  main.cpp
include/: chess_win.hpp  pieces.hpp
src/: chess_win.cpp  pieces.cpp
unit_tests/: CMakeLists.txt  UT_pieces.cpp
unit_tests/include/: UT_format.hpp
